[tool.poetry]
name = "reptile"
version = "0.1.0"
description = "Python Type Hint"
authors = ["nianwei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
rich = "^13.8.1"
pretty-errors = "^1.2.25"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
yamlfix = "^1.17.0"
fake-useragent = "^1.5.1"
faker = "^30.1.0"
pendulum = "^3.0.0"
toolz = "^0.12.1"
bar-chart-race = "^0.1.0"
pandas = "^2.2.3"
bs4 = "^0.0.2"
requests = "^2.32.3"
jieba = "^0.42.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["F401"]
extend-select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = false
known-first-party = []
known-third-party = []
lines-after-imports = -1
order-by-type = false
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.yamlfix]
line_length = 80
indentation = 4
