[tool.poetry]
name = "reptile"
version = "0.1.0"
description = ""
authors = ["nianwei <2297709907@qq.com>"]
license = "MIT"
repository = "https://github.com/python-poetry/poetry"
homepage = "https://python-poetry.org"
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.9"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pretty-errors = "^1.2.25"
mypy = "~1.10"
pre-commit = "^3"
pendulum = "^3.0.0"
toolz = "^0.12.1"
returns = {version = "~0", extras = ["compatible-mypy"]}
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
yamlfix = "~1"
rich = "^13.9.2"
ruff = "^0.6.9"


[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py39"
line-length = 119
exclude = [".venv"]
fix = true
cache-dir = ".cache/ruff"
indent-width = 4


[tool.ruff.lint]
extend-select = ["I"]


[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true


[tool.yamlfix]
line_length = 119
indentation = 2
none_representation = "null"
allow_duplicate_keys = false
